fix javadoc build (and errors)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>