@@ -242,6 +242,16 @@ holder.
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <additionalJOptions>
+                                <additionalJOption>--add-modules</additionalJOption>
+                                <additionalJOption>java.activation</additionalJOption>
+                            </additionalJOptions>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
